--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background: rgb(208,198,178);
-    background: linear-gradient(156deg, rgba(208,198,178,1) 0%, rgba(64,64,64,1) 84%);
+    background: linear-gradient(156deg, #91846d 0%, #494847 84%);
 }
 .container {
     margin-left: auto;
