--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     background: rgb(208,198,178);
     background: linear-gradient(156deg, #91846d 0%, #494847 84%);
+    padding-top: 75px;
 }
 .container {
     margin-left: auto;
@@ -14,8 +15,9 @@ body {
     color: #ffffff;
     font-family: Cascadia Code, serif;
     font-size: 30px;
-    padding: 20px 20px;
+    padding: 20px;
     text-align: right;
+    min-height: 35px;
 }
 
 .keys {
